# spec-clarify

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: MINIMAL_SPEC_PRINCIPLES.md
evals/: README.md  benchmark_cases.jsonl  rubric.md
examples/: sample_output.json  sample_output.md  sample_requirement.txt
src/specclarify_adapters/: __init__.py
src/specclarify_adapters/openclaw/: README.md  __init__.py  adapter.py
src/specclarify_core/: __init__.py  cli.py  engine.py  schema.py  service.py
src/specclarify_eval/: __init__.py  compare.py  runner.py
src/specclarify_providers/: __init__.py  base.py  config.py  openai_compatible.py
tests/: test_adapter_openclaw.py  test_cli.py  test_cli_modes.py  test_compare.py  test_schema.py  test_service.py
