[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-clarify"
version = "0.1.0"
description = "Turn vague requirements into executable specs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
spec-clarify = "specclarify_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
